[package]
edition = "2021"
name = "esp32_hal_dht11_driver"
authors = ["Eli <eliperez0024@gmail.com>"]
version = "0.1.1"
keywords = ["embedded", "no-std", "dht11", "esp32", "esp32-wrover"]
description = "A Rust crate that reads temperature and humidity data from the DHT11 sensors for esp32 series, updated to remove depancancy of the embedded_hal crate"
license = "MIT"
repository = "https://github.com/counterspecies/esp32_hal_dht11_driver"

homepage = "https://github.com/counterspecies/esp32_hal_dht11_driver"
documentation = "https://github.com/counterspecies/esp32_hal_dht11_driver"

[lib]
name = "esp32_hal_dht11_driver"
path = "src/lib.rs"



[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32", "unstable"] } 

# esp32 = { version = "0.37.0" }
# esp32c2 = { version = "0.26.0" }
# esp32c3 = { version = "0.29.0" }
# esp32c6 = { version = "0.20.0" }
# esp32h2 = { version = "0.16.0" }
# esp32s2 = { version = "0.28.0" }
# esp32s3 = { version = "0.32.0" }

[features]
default = ["esp32c3"]
esp32 = ["esp-hal/esp32"]
esp32c2 = ["esp-hal/esp32c2"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32h2 = ["esp-hal/esp32h2"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
