[package]
edition = "2021"
name = "esp32_hal_dht11_driver"
authors = ["Eli <eliperez0024@gmail.com>"]
version = "0.2.2"
keywords = ["embedded", "no-std", "dht11", "esp32", "esp32-wrover"]
description = "A Rust crate that reads temperature and humidity data from the DHT11 sensors for esp32 series, updated to remove depancancy of the embedded_hal crate"
license = "MIT"
repository = "https://github.com/eliperez-dev/esp32_hal_dht11_driver"

homepage = "https://github.com/eliperez-dev/esp32_hal_dht11_driver"
documentation = "https://github.com/eliperez-dev/esp32_hal_dht11_driver"

[lib]
name = "esp32_hal_dht11_driver"
path = "src/lib.rs"



[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32c3", "unstable"] } 


[features]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
